Mudando a interface, criando estilo do buttao de upload

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "editor-fotos",
   "version": "0.1.0",
   "private": true,
-  "author": "João Felipe de Oliveira Souza",
+  "author": "Felipe Souza",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
